--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pytest-selenium = "*"
 selenium = "*"
 pytest = "*"
-webdriver-manager = "*"
 python-dotenv = "*"
+webdriver-manager = "*"
+selenium-wire = "*"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.8"
