--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,11 @@ python-dotenv = "*"
 webdriver-manager = "*"
 selenium-wire = "*"
 pytest-html-reporter = "*"
+requests = "*"
+assertpy = "*"
 
 [dev-packages]
 autopep8 = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
