--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,5 @@
 output.json
 pytest_html_report.html
 
-/tests/end-to-end/__pycache__
-/tests/api/__pycache__
-/utilities/__pycache__
+**/*/__pycache__
 /archive
